--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -52,24 +52,25 @@ assetic:
 # Doctrine Configuration
 doctrine:
     dbal:
-        driver:   pdo_mysql
-        host:     "%database_host%"
-        port:     "%database_port%"
-        dbname:   "%database_name%"
-        user:     "%database_user%"
-        password: "%database_password%"
+        driver:   pdo_sqlite
         charset:  UTF8
-        # if using pdo_sqlite as your database driver:
-        #   1. add the path in parameters.yml
-        #     e.g. database_path: "%kernel.root_dir%/data/data.db3"
-        #   2. Uncomment database_path in parameters.yml.dist
-        #   3. Uncomment next line:
-        #     path:     "%database_path%"
+        path: "%database_path%"
 
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
-        naming_strategy: doctrine.orm.naming_strategy.underscore
-        auto_mapping: true
+        entity_managers:
+            default:
+                naming_strategy: doctrine.orm.naming_strategy.underscore
+                auto_mapping: false
+                connection: default
+                mappings:
+                    Chinook:
+                        type: annotation
+                        dir: "%kernel.root_dir%/../src/Chinook/DigitalMedia/DomainModel"
+                        prefix: Chinook\DigitalMedia\DomainModel
+                        alias: DigitalMedia
+                        is_bundle: false
+
 
 # Swiftmailer Configuration
 swiftmailer:
