--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,6 +4,12 @@ parameters:
 #    parameter_name: value
 
 services:
-#    service_name:
-#        class: AppBundle\Directory\ClassName
-#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    album_repository:
+        class: AppBundle\Infrastructure\Persistence\DoctrineAlbumRepository
+        arguments:
+            - @doctrine.orm.entity_manager
+
+    album_application_service:
+        class: Chinook\DigitalMedia\Application\Album\AlbumApplicationService
+        arguments:
+            - @album_repository
