--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,12 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "stack/builder": "^1.0",
         "stack/run": "^1.0",
-        "stack/lazy-http-kernel": "^1.0"
+        "stack/lazy-http-kernel": "^1.0",
+        "league/tactician-bundle": "^0.3.0",
+        "league/tactician-doctrine": "^0.6.0",
+        "league/tactician-bernard": "^0.4.1",
+        "predis/predis": "^1.0",
+        "bernard/bernard": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
