--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -85,14 +85,17 @@ tactician:
         default:
             middleware:
                 - tactician.middleware.locking
+                - tactician.middleware.validator
                 - tactician.middleware.command_handler
 
         transactional:
             middleware:
                 - tactician.middleware.locking
                 - tactician.middleware.doctrine
+                - tactician.middleware.validator
                 - tactician.middleware.command_handler
 
         queued:
             middleware:
+                - tactician.middleware.validator
                 - tactician.middleware.bernard
