--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -2,16 +2,16 @@
 
 <!-- http://phpunit.de/manual/4.1/en/appendixes.configuration.html -->
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.1/phpunit.xsd"
+         xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.7/phpunit.xsd"
          backupGlobals="false"
          colors="true"
          bootstrap="bootstrap.php.cache"
 >
     <testsuites>
         <testsuite name="Project Test Suite">
-            <directory>../src/*/*Bundle/Tests</directory>
-            <directory>../src/*/Bundle/*Bundle/Tests</directory>
-            <directory>../src/*Bundle/Tests</directory>
+            <directory>../tests/*/*Bundle/Tests</directory>
+            <directory>../tests/*/Bundle/*Bundle/Tests</directory>
+            <directory>../tests/*Bundle/Tests</directory>
         </testsuite>
     </testsuites>
 
@@ -25,12 +25,12 @@
         <whitelist>
             <directory>../src</directory>
             <exclude>
-                <directory>../src/*Bundle/Resources</directory>
-                <directory>../src/*Bundle/Tests</directory>
-                <directory>../src/*/*Bundle/Resources</directory>
-                <directory>../src/*/*Bundle/Tests</directory>
-                <directory>../src/*/Bundle/*Bundle/Resources</directory>
-                <directory>../src/*/Bundle/*Bundle/Tests</directory>
+                <directory>../tests/*Bundle/Resources</directory>
+                <directory>../tests/*Bundle/Tests</directory>
+                <directory>../tests/*/*Bundle/Resources</directory>
+                <directory>../tests/*/*Bundle/Tests</directory>
+                <directory>../tests/*/Bundle/*Bundle/Resources</directory>
+                <directory>../tests/*/Bundle/*Bundle/Tests</directory>
             </exclude>
         </whitelist>
     </filter>
