--- a/composer.json
+++ b/composer.json
@@ -32,10 +32,12 @@
         "league/tactician-doctrine": "^0.6.0",
         "league/tactician-bernard": "^0.4.1",
         "predis/predis": "^1.0",
-        "bernard/bernard": "dev-master"
+        "bernard/bernard": "dev-master",
+        "fzaninotto/faker": "^1.5"
     },
     "require-dev": {
-        "sensio/generator-bundle": "~2.3"
+        "sensio/generator-bundle": "~2.3",
+        "phpunit/phpunit": "^4.7"
     },
     "scripts": {
         "post-root-package-install": [
